--- a/src/wts-web/src/main/webapp/view/web-simple/paper/text/card.css
+++ b/src/wts-web/src/main/webapp/view/web-simple/paper/text/card.css
@@ -126,3 +126,22 @@
 	font-size: 26px;
 	color: #d13133;
 }
+
+.wts-paper-forms h2 {
+	font-size: 20px;
+	margin-left: 8px;
+	font-weight: 700;
+	margin-top: 1em;
+}
+
+.wts-paper-forms h3 {
+	font-size: 18px;
+	margin-left: 8px;
+	margin-top: 1em;
+}
+
+.wts-paper-forms h4 {
+	font-size: 16px;
+	margin-left: 8px;
+	margin-top: 1em;
+}
