--- a/src/wts-web/src/main/webapp/view/exam/subject/subject.css
+++ b/src/wts-web/src/main/webapp/view/exam/subject/subject.css
@@ -1,3 +1,4 @@
+@charset="UTF-8";
 .chapterBox {
 	padding: 20px;
 	background-color: #f5f5f5;
@@ -108,6 +109,10 @@
 	border-radius: 6px;
 	padding: 6px;
 	margin-bottom: 6px;
+}
+
+.answerRightHover {
+	background-color: #b4dea3;
 }
 
 .answerVacancyViewBox {
